# bioinformatics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  rename_raxml.sh
practical-2021/: .gitignore  CMakeCache.txt  CMakeLists.txt  makefile  softwipe_assertion_check.txt  softwipe_call  softwipe_command_file  softwipe_compilation_warnings_must_be_fixed.txt  softwipe_cppcheck_results.txt  softwipe_kwstyle_results.txt  softwipe_lizard_results.txt
practical-2021/benchmark/: README.md  raxml-benchmark.py
practical-2021/cmake/: Findortools.cmake
practical-2021/foo/: distances  info  results.json
practical-2021/plots_python/: plotscripts.ipynb
practical-2021/plots_python/.ipynb_checkpoints/: plotscripts-checkpoint.ipynb
practical-2021/src/: CMakeLists.txt  DistanceUtil.hpp  Distances.hpp  GeneralizedRFDistance.hpp  MCI.hpp  MSI.hpp  MaximumMatcher.hpp  Metric.cpp  Metric.hpp  PhylogeneticMathUtils.cpp  PhylogeneticMathUtils.hpp  PllSplits.cpp  PllSplits.hpp  PllTree.cpp  PllTree.hpp  RFData.hpp  RFDistance.cpp  RFDistance.hpp  RFDistance2.cpp  RFDistance2.hpp  SPI.hpp  Solver.hpp  TriangleMatrix.cpp  TriangleMatrix.hpp  WeightScaler.hpp  enums.hpp  main.cpp
practical-2021/src/datastructures/: CMakeLists.txt  IntersectionCache.cpp  IntersectionCache.hpp  PllPointerMap.cpp  PllPointerMap.hpp  PllSplits.cpp  PllSplits.hpp  PllTree.cpp  PllTree.hpp  SimilarityCache.cpp  SimilarityCache.hpp  TempManager.hpp  TriangleMatrix.hpp  UniquePllMap.cpp  UniquePllMap.hpp
practical-2021/src/io/: CMakeLists.txt  CommandLineOptions.hpp  Converter.hpp  FileReader.cpp  FileReader.hpp  IOData.cpp  IOData.h  IOData.hpp  IOUtil.hpp  RFDataReader.hpp  RFDataWriter.hpp  TreeReader.hpp
practical-2021/src/io/json/: json.hpp
practical-2021/src/metrics/: MCI.hpp  MSI.hpp  Metric.hpp  SPI.hpp
practical-2021/test/: CMakeLists.txt
practical-2021/test/res/R_results/1288/: distances
practical-2021/test/res/R_results/1481/: distances
practical-2021/test/res/R_results/1512/: distances
practical-2021/test/res/R_results/MCI/absolute/heads/: 24
practical-2021/test/res/R_results/MCI/heads/: 1288  1512  1604  1908  218  350  628  714  994
practical-2021/test/res/R_results/MCI/heads/125/: distances
practical-2021/test/res/R_results/MCI/heads/141/: distances
practical-2021/test/res/R_results/MCI/heads/143/: distances
practical-2021/test/res/R_results/MCI/heads/148/: distances
practical-2021/test/res/R_results/MCI/heads/150/: distances
practical-2021/test/res/R_results/MCI/heads/1604/: distances
practical-2021/test/res/R_results/MCI/heads/218/: distances
practical-2021/test/res/R_results/MCI/similarity/heads/: 125  141  143  148  1481  150  2000  24  354  404  500  885
practical-2021/test/res/R_results/MSI/heads/: 125  1288  143  24  350  500  628  714  994
practical-2021/test/res/R_results/MSI/similarity/heads/: 141  148  1481  150  1512  1604  1908  2000  218  354  404  885
practical-2021/test/res/R_results/SPI/heads/: 1288  141  1481  1512  1604  2000  24  350  354  404
practical-2021/test/res/R_results/SPI/similarity/heads/: 125  143  148  150  1908  218  500  628  714  885  994
practical-2021/test/res/data/: example_from_slideshow  simple_newick
practical-2021/test/res/data/heads/: debug
practical-2021/test/res/debug_instances/: 1000taxa  100taxa  200taxa  500taxa
practical-2021/test/res/references_json/MCI/ABSOLUTE/heads/: 125.json  1288.json  141.json  143.json  148.json  150.json  218.json  24.json
practical-2021/test/res/references_json/MCI/RELATIVE/heads/: 125.json  1288.json  141.json  143.json  148.json  150.json  218.json  24.json
practical-2021/test/res/references_json/MCI/SIMILARITY/heads/: 125.json  1288.json  141.json  143.json  148.json  1481.json  150.json  1512.json  1604.json  1908.json  2000.json  218.json  24.json  350.json  354.json  404.json  500.json  628.json  714.json  885.json  994.json
practical-2021/test/res/references_json/MSI/SIMILARITY/heads/: 125.json  1288.json  141.json  143.json  148.json  1481.json  150.json  1512.json  1604.json  1908.json  2000.json  218.json  24.json  350.json  354.json  404.json  500.json  628.json  714.json  885.json  994.json
practical-2021/test/res/references_json/RF/ABSOLUTE/heads/: 125.json  1288.json  141.json  143.json  148.json  1481.json  150.json  1512.json  1604.json  1908.json  2000.json  218.json  2308.json  24.json  2554.json  350.json  354.json  404.json  500.json  628.json  714.json  885.json  994.json
practical-2021/test/res/references_json/RF/RELATIVE/heads/: 125.json  1288.json  141.json  143.json  148.json  1481.json  150.json  1512.json  1604.json  1908.json  2000.json  218.json  2308.json  24.json  2554.json  350.json  354.json  404.json  500.json  628.json  714.json  885.json  994.json
practical-2021/test/res/references_json/SPI/SIMILARITY/heads/: 125.json  1288.json  141.json  143.json  148.json  1481.json  150.json  1512.json  1604.json  1908.json  2000.json  218.json  24.json  350.json  354.json  404.json  500.json  628.json  714.json  885.json  994.json
practical-2021/test/src/: CMakeLists.txt  TestUtil.hpp  main.cpp  unittest.cpp
practical-2021/test/src/gtest/: CMakeLists.txt  Conversion.cpp  DistanceTest.cpp  DistanceUtilTest.cpp  DistancesTest.cpp  GeneralizedRFTest.cpp  IOUtilTest.cpp  IOtest.cpp  MCITest.cpp  MSITest.cpp  MaximumMatcher.cpp  MaximumMatcherTest.cpp  MetricsTest.cpp  PhylomathTest.cpp  PllSplitTest.cpp  RFTest.cpp  SPITest.cpp  TriangleMatrixTest.cpp  WeightScalerTest.cpp  unittest.cpp  unittest2.cpp
