
#add_library(rf_io_lib
#        IOData.cpp
#        IOData.hpp
#        CommandLineOptions.hpp
#        RFDataReader.hpp
 #       RFDataWriter.hpp
 #       TreeReader.hpp
#        IOUtil.hpp
#        )
#target_include_directories(rf_io_lib SYSTEM INTERFACE json_lib)
#target_link_libraries(rf_io_lib json_lib)
